# rust-opencv-examples

./: Cargo.toml  README.md
src/utils/: errors.rs
