[package]
name = "rust-opencv-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
derive_more = "0.99"
opencv = { version = "0.86", default-features = false, features = ["highgui", "face", "imgcodecs", "imgproc", "videoio", "videostab", "optflow"]}

[[bin]]
name = "histogram"
